parser.output
Terminals unused in grammar

   DOCTOKEN


Estado 3 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 6 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 20 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 24 conflictos: 1 desplazamiento/reducción, 2 reducción/reducción
Estado 25 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 26 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 27 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 28 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 29 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 30 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 32 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 33 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 34 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 35 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 36 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 38 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 41 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 42 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 116 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 119 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 123 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 140 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 143 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 145 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 241 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 258 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 303 conflictos: 4 reducción(ones)/reducción(ones)
Estado 304 conflictos: 4 reducción(ones)/reducción(ones)


Gramática

    0 $accept: sigma $end

    1 sigma: DOCTYPE article

    2 article: ARTICLE info title opt sect ENDTAG_ART
    3        | ARTICLE info title opt Ssect ENDTAG_ART
    4        | ARTICLE info title opt ENDTAG_ART
    5        | ARTICLE info title sect ENDTAG_ART
    6        | ARTICLE info title Ssect ENDTAG_ART
    7        | ARTICLE info opt sect ENDTAG_ART
    8        | ARTICLE info opt Ssect ENDTAG_ART
    9        | ARTICLE title opt sect ENDTAG_ART
   10        | ARTICLE title opt Ssect ENDTAG_ART
   11        | ARTICLE info title ENDTAG_ART
   12        | ARTICLE info opt ENDTAG_ART
   13        | ARTICLE title opt ENDTAG_ART
   14        | ARTICLE info sect ENDTAG_ART
   15        | ARTICLE info Ssect ENDTAG_ART
   16        | ARTICLE title sect ENDTAG_ART
   17        | ARTICLE title Ssect ENDTAG_ART
   18        | ARTICLE opt sect ENDTAG_ART
   19        | ARTICLE opt Ssect ENDTAG_ART
   20        | ARTICLE info ENDTAG_ART
   21        | ARTICLE title ENDTAG_ART
   22        | ARTICLE opt ENDTAG_ART
   23        | ARTICLE Ssect ENDTAG_ART
   24        | ARTICLE sect ENDTAG_ART

   25 opt: itemizedlist opt
   26    | important opt
   27    | para opt
   28    | simpara opt
   29    | address opt
   30    | mediaobject opt
   31    | informaltable opt
   32    | comment opt
   33    | abstract opt
   34    | important
   35    | emphasis
   36    | itemizedlist
   37    | para
   38    | simpara
   39    | address
   40    | mediaobject
   41    | informaltable
   42    | comment
   43    | abstract

   44 Ssect: simplesection Ssect
   45      | simplesection

   46 sect: section sect
   47     | section

   48 section: SECTION info title2 opt sect ENDTAG_S
   49        | SECTION info title2 opt Ssect ENDTAG_S
   50        | SECTION info title2 opt ENDTAG_S
   51        | SECTION info title2 sect ENDTAG_S
   52        | SECTION info title2 Ssect ENDTAG_S
   53        | SECTION info opt sect ENDTAG_S
   54        | SECTION info opt Ssect ENDTAG_S
   55        | SECTION title2 opt sect ENDTAG_S
   56        | SECTION title2 opt Ssect ENDTAG_S
   57        | SECTION info title2 ENDTAG_S
   58        | SECTION info opt ENDTAG_S
   59        | SECTION title2 opt ENDTAG_S
   60        | SECTION info sect ENDTAG_S
   61        | SECTION info Ssect ENDTAG_S
   62        | SECTION title2 sect ENDTAG_S
   63        | SECTION title2 Ssect ENDTAG_S
   64        | SECTION opt sect ENDTAG_S
   65        | SECTION opt Ssect ENDTAG_S
   66        | SECTION info ENDTAG_S
   67        | SECTION title2 ENDTAG_S
   68        | SECTION opt ENDTAG_S
   69        | SECTION Ssect ENDTAG_S
   70        | SECTION sect ENDTAG_S

   71 simplesection: /* vacío */
   72              | SIMPLESECTION info title opt ENDTAG_SS
   73              | SIMPLESECTION info title ENDTAG_SS
   74              | SIMPLESECTION info opt ENDTAG_SS
   75              | SIMPLESECTION title opt ENDTAG_SS
   76              | SIMPLESECTION info ENDTAG_SS
   77              | SIMPLESECTION title ENDTAG_SS
   78              | SIMPLESECTION opt ENDTAG_SS

   79 info: INFO in_info ENDTAG_INFO

   80 in_info: mediaobject in_info
   81        | abstract in_info
   82        | address in_info
   83        | author in_info
   84        | date in_info
   85        | copyright in_info
   86        | title in_info
   87        | mediaobject
   88        | abstract
   89        | address
   90        | author
   91        | date
   92        | copyright
   93        | title

   94 in_abs: para
   95       | simpara
   96       | para in_abs
   97       | simpara in_abs

   98 abstract: ABSTRACT title in_abs ENDTAG_ABS
   99         | ABSTRACT in_abs ENDTAG_ABS

  100 address: ADDRESS in_ad ENDTAG_ADD

  101 in_ad: texto in_ad
  102      | street in_ad
  103      | city in_ad
  104      | state in_ad
  105      | phone in_ad
  106      | email in_ad
  107      | texto
  108      | street
  109      | city
  110      | state
  111      | phone
  112      | email

  113 author: AUTHOR in_aut ENDTAG_AUT

  114 in_aut: firstname in_aut
  115       | surname in_aut
  116       | firstname
  117       | surname

  118 in_cr1: year in_cr1
  119       | year

  120 in_cr2: holder in_cr2
  121       | holder

  122 copyright: COPYRIGHT in_cr1 in_cr2 ENDTAG_CP
  123          | COPYRIGHT in_cr1 ENDTAG_CP

  124 texto: TOKEN

  125 in_tit: texto in_tit
  126       | emphasis in_tit
  127       | email in_tit
  128       | link in_tit
  129       | texto
  130       | emphasis
  131       | email
  132       | link

  133 title: TITLE in_tit ENDTAG_TT1

  134 title2: TITLE2 in_tit ENDTAG_TT2

  135 in_g1: texto in_g1
  136      | emphasis in_g1
  137      | email in_g1
  138      | author in_g1
  139      | comment in_g1
  140      | link in_g1
  141      | texto
  142      | emphasis
  143      | email
  144      | author
  145      | comment
  146      | link

  147 comment: COMMENT in_g1 ENDTAG_COM

  148 simpara: SIMPARA in_g1 ENDTAG_SP

  149 emphasis: EMPHASIS in_g1 ENDTAG_EMP

  150 link: LINK ENDTAG

  151 para: PARA in_para ENDTAG_P

  152 in_para: texto in_para
  153        | opt in_para
  154        | opt
  155        | texto

  156 important: IMPORTANT title opt ENDTAG_IMP
  157          | IMPORTANT opt ENDTAG_IMP

  158 in_g2: texto in_g2
  159      | link in_g2
  160      | emphasis in_g2
  161      | comment in_g2
  162      | emphasis
  163      | comment
  164      | texto
  165      | link

  166 firstname: FIRSTNAME in_g2 ENDTAG_FN

  167 surname: SURNAME in_g2 ENDTAG_SN

  168 street: STREET in_g2 ENDTAG_ST

  169 city: CITY in_g2 ENDTAG_CT

  170 state: STATE in_g2 ENDTAG_STT

  171 phone: PHONE in_g2 ENDTAG_PH

  172 email: EMAIL in_g2 ENDTAG_EM

  173 date: DATE in_g2 ENDTAG_DT

  174 year: YEAR in_g2 ENDTAG_YR

  175 holder: HOLDER in_g2 ENDTAG_HD

  176 mediaobject: MEDIAOBJECT info media ENDTAG_MOBJ
  177            | MEDIAOBJECT media ENDTAG_MOBJ

  178 media: videoobject media
  179      | imageobject media
  180      | imageobject
  181      | videoobject

  182 videoobject: info VIDEODATA ENDTAG
  183            | VIDEODATA ENDTAG

  184 imageobject: info IMAGEDATA ENDTAG
  185            | IMAGEDATA ENDTAG

  186 itemizedlist: ITEMIZEDLIST in_il ENDTAG_IL

  187 in_il: listitem in_il
  188      | listitem

  189 listitem: LISTITEM opt ENDTAG_LI

  190 informaltable: INFORMALTABLE in_it1 ENDTAG_IT
  191              | INFORMALTABLE in_it2 ENDTAG_IT

  192 in_it1: mediaobject in_it1
  193       | mediaobject

  194 in_it2: tgroup in_it2
  195       | tgroup

  196 tgroup: TGROUP thead tfoot tbody ENDTAG_TG
  197       | TGROUP tfoot tbody ENDTAG_TG
  198       | TGROUP thead tbody ENDTAG_TG
  199       | TGROUP tbody ENDTAG_TG

  200 thead: THEAD add_row ENDTAG_TH

  201 tbody: TBODY add_row ENDTAG_TB

  202 tfoot: TFOOT add_row ENDTAG_TF

  203 add_row: row add_row
  204        | row

  205 row: ROW in_row ENDTAG_RW

  206 in_row: entry in_row
  207       | entrybl in_row
  208       | entry
  209       | entrybl

  210 entrybl: ENTRYBL thead tbody ENDTAG_ETBL
  211        | ENTRYBL tbody ENDTAG_ETBL

  212 entry: ENTRY in_ent ENDTAG_ET

  213 in_ent: texto in_ent
  214       | itemizedlist in_ent
  215       | important in_ent
  216       | para in_ent
  217       | simpara in_ent
  218       | mediaobject in_ent
  219       | comment in_ent
  220       | abstract in_ent
  221       | texto
  222       | itemizedlist
  223       | important
  224       | para
  225       | simpara
  226       | mediaobject
  227       | comment
  228       | abstract


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
DOCTYPE (258) 1
DOCTOKEN (259)
ARTICLE (260) 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24
ENDTAG_ART (261) 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24
ENDTAG_S (262) 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70
ENDTAG_TT1 (263) 133
ENDTAG_TT2 (264) 134
ENDTAG_TB (265) 201
ENDTAG_TH (266) 200
ENDTAG_TF (267) 202
ENDTAG_TG (268) 196 197 198 199
ENDTAG_ET (269) 212
ENDTAG_ETBL (270) 210 211
LINK (271) 150
ENDTAG_IT (272) 190 191
ENDTAG_SS (273) 72 73 74 75 76 77 78
ENDTAG_INFO (274) 79
ENDTAG_RW (275) 205
ENDTAG_ABS (276) 98 99
ENDTAG_ADD (277) 100
ENDTAG_AUT (278) 113
ENDTAG_COM (279) 147
ENDTAG_SP (280) 148
ENDTAG_EMP (281) 149
ENDTAG_P (282) 151
ENDTAG_IMP (283) 156 157
ENDTAG_FN (284) 166
ENDTAG_SN (285) 167
ENDTAG_ST (286) 168
ENDTAG_CT (287) 169
ENDTAG_STT (288) 170
ENDTAG_PH (289) 171
ENDTAG_EM (290) 172
ENDTAG_DT (291) 173
ENDTAG_YR (292) 174
ENDTAG_HD (293) 175
ENDTAG_IL (294) 186
ENDTAG_LI (295) 189
ENDTAG_MOBJ (296) 176 177
ENDTAG_CP (297) 122 123
ENDTAG (298) 150 182 183 184 185
SECTION (299) 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70
SIMPLESECTION (300) 72 73 74 75 76 77 78
TITLE (301) 133
TITLE2 (302) 134
LISTITEM (303) 189
INFO (304) 79
TGROUP (305) 196 197 198 199
ENTRY (306) 212
ROW (307) 205
THEAD (308) 200
TFOOT (309) 202
TBODY (310) 201
INFORMALTABLE (311) 190 191
ITEMIZEDLIST (312) 186
ABSTRACT (313) 98 99
ADDRESS (314) 100
AUTHOR (315) 113
COMMENT (316) 147
SIMPARA (317) 148
EMPHASIS (318) 149
PARA (319) 151
IMPORTANT (320) 156 157
ENTRYBL (321) 210 211
FIRSTNAME (322) 166
SURNAME (323) 167
STREET (324) 168
CITY (325) 169
STATE (326) 170
PHONE (327) 171
EMAIL (328) 172
DATE (329) 173
YEAR (330) 174
HOLDER (331) 175
COPYRIGHT (332) 122 123
MEDIAOBJECT (333) 176 177
IMAGEDATA (334) 184 185
VIDEODATA (335) 182 183
TOKEN (336) 124


No terminales con las reglas donde aparecen

$accept (82)
    en la izquierda: 0
sigma (83)
    en la izquierda: 1, en la derecha: 0
article (84)
    en la izquierda: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
    20 21 22 23 24, en la derecha: 1
opt (85)
    en la izquierda: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43, en la derecha: 2 3 4 7 8 9 10 12 13 18 19 22 25 26 27
    28 29 30 31 32 33 48 49 50 53 54 55 56 58 59 64 65 68 72 74 75
    78 153 154 156 157 189
Ssect (86)
    en la izquierda: 44 45, en la derecha: 3 6 8 10 15 17 19 23 44
    49 52 54 56 61 63 65 69
sect (87)
    en la izquierda: 46 47, en la derecha: 2 5 7 9 14 16 18 24 46 48
    51 53 55 60 62 64 70
section (88)
    en la izquierda: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67 68 69 70, en la derecha: 46 47
simplesection (89)
    en la izquierda: 71 72 73 74 75 76 77 78, en la derecha: 44 45
info (90)
    en la izquierda: 79, en la derecha: 2 3 4 5 6 7 8 11 12 14 15 20
    48 49 50 51 52 53 54 57 58 60 61 66 72 73 74 76 176 182 184
in_info (91)
    en la izquierda: 80 81 82 83 84 85 86 87 88 89 90 91 92 93, en la derecha:
    79 80 81 82 83 84 85 86
in_abs (92)
    en la izquierda: 94 95 96 97, en la derecha: 96 97 98 99
abstract (93)
    en la izquierda: 98 99, en la derecha: 33 43 81 88 220 228
address (94)
    en la izquierda: 100, en la derecha: 29 39 82 89
in_ad (95)
    en la izquierda: 101 102 103 104 105 106 107 108 109 110 111 112,
    en la derecha: 100 101 102 103 104 105 106
author (96)
    en la izquierda: 113, en la derecha: 83 90 138 144
in_aut (97)
    en la izquierda: 114 115 116 117, en la derecha: 113 114 115
in_cr1 (98)
    en la izquierda: 118 119, en la derecha: 118 122 123
in_cr2 (99)
    en la izquierda: 120 121, en la derecha: 120 122
copyright (100)
    en la izquierda: 122 123, en la derecha: 85 92
texto (101)
    en la izquierda: 124, en la derecha: 101 107 125 129 135 141 152
    155 158 164 213 221
in_tit (102)
    en la izquierda: 125 126 127 128 129 130 131 132, en la derecha:
    125 126 127 128 133 134
title (103)
    en la izquierda: 133, en la derecha: 2 3 4 5 6 9 10 11 13 16 17
    21 72 73 75 77 86 93 98 156
title2 (104)
    en la izquierda: 134, en la derecha: 48 49 50 51 52 55 56 57 59
    62 63 67
in_g1 (105)
    en la izquierda: 135 136 137 138 139 140 141 142 143 144 145 146,
    en la derecha: 135 136 137 138 139 140 147 148 149
comment (106)
    en la izquierda: 147, en la derecha: 32 42 139 145 161 163 219
    227
simpara (107)
    en la izquierda: 148, en la derecha: 28 38 95 97 217 225
emphasis (108)
    en la izquierda: 149, en la derecha: 35 126 130 136 142 160 162
link (109)
    en la izquierda: 150, en la derecha: 128 132 140 146 159 165
para (110)
    en la izquierda: 151, en la derecha: 27 37 94 96 216 224
in_para (111)
    en la izquierda: 152 153 154 155, en la derecha: 151 152 153
important (112)
    en la izquierda: 156 157, en la derecha: 26 34 215 223
in_g2 (113)
    en la izquierda: 158 159 160 161 162 163 164 165, en la derecha:
    158 159 160 161 166 167 168 169 170 171 172 173 174 175
firstname (114)
    en la izquierda: 166, en la derecha: 114 116
surname (115)
    en la izquierda: 167, en la derecha: 115 117
street (116)
    en la izquierda: 168, en la derecha: 102 108
city (117)
    en la izquierda: 169, en la derecha: 103 109
state (118)
    en la izquierda: 170, en la derecha: 104 110
phone (119)
    en la izquierda: 171, en la derecha: 105 111
email (120)
    en la izquierda: 172, en la derecha: 106 112 127 131 137 143
date (121)
    en la izquierda: 173, en la derecha: 84 91
year (122)
    en la izquierda: 174, en la derecha: 118 119
holder (123)
    en la izquierda: 175, en la derecha: 120 121
mediaobject (124)
    en la izquierda: 176 177, en la derecha: 30 40 80 87 192 193 218
    226
media (125)
    en la izquierda: 178 179 180 181, en la derecha: 176 177 178 179
videoobject (126)
    en la izquierda: 182 183, en la derecha: 178 181
imageobject (127)
    en la izquierda: 184 185, en la derecha: 179 180
itemizedlist (128)
    en la izquierda: 186, en la derecha: 25 36 214 222
in_il (129)
    en la izquierda: 187 188, en la derecha: 186 187
listitem (130)
    en la izquierda: 189, en la derecha: 187 188
informaltable (131)
    en la izquierda: 190 191, en la derecha: 31 41
in_it1 (132)
    en la izquierda: 192 193, en la derecha: 190 192
in_it2 (133)
    en la izquierda: 194 195, en la derecha: 191 194
tgroup (134)
    en la izquierda: 196 197 198 199, en la derecha: 194 195
thead (135)
    en la izquierda: 200, en la derecha: 196 198 210
tbody (136)
    en la izquierda: 201, en la derecha: 196 197 198 199 210 211
tfoot (137)
    en la izquierda: 202, en la derecha: 196 197
add_row (138)
    en la izquierda: 203 204, en la derecha: 200 201 202 203
row (139)
    en la izquierda: 205, en la derecha: 203 204
in_row (140)
    en la izquierda: 206 207 208 209, en la derecha: 205 206 207
entrybl (141)
    en la izquierda: 210 211, en la derecha: 207 209
entry (142)
    en la izquierda: 212, en la derecha: 206 208
in_ent (143)
    en la izquierda: 213 214 215 216 217 218 219 220 221 222 223 224
    225 226 227 228, en la derecha: 212 213 214 215 216 217 218 219
    220


estado 0

    0 $accept: . sigma $end
    1 sigma: . DOCTYPE article

    DOCTYPE  desplazar e ir al estado 1

    sigma  ir al estado 2


estado 1

    1 sigma: DOCTYPE . article
    2 article: . ARTICLE info title opt sect ENDTAG_ART
    3        | . ARTICLE info title opt Ssect ENDTAG_ART
    4        | . ARTICLE info title opt ENDTAG_ART
    5        | . ARTICLE info title sect ENDTAG_ART
    6        | . ARTICLE info title Ssect ENDTAG_ART
    7        | . ARTICLE info opt sect ENDTAG_ART
    8        | . ARTICLE info opt Ssect ENDTAG_ART
    9        | . ARTICLE title opt sect ENDTAG_ART
   10        | . ARTICLE title opt Ssect ENDTAG_ART
   11        | . ARTICLE info title ENDTAG_ART
   12        | . ARTICLE info opt ENDTAG_ART
   13        | . ARTICLE title opt ENDTAG_ART
   14        | . ARTICLE info sect ENDTAG_ART
   15        | . ARTICLE info Ssect ENDTAG_ART
   16        | . ARTICLE title sect ENDTAG_ART
   17        | . ARTICLE title Ssect ENDTAG_ART
   18        | . ARTICLE opt sect ENDTAG_ART
   19        | . ARTICLE opt Ssect ENDTAG_ART
   20        | . ARTICLE info ENDTAG_ART
   21        | . ARTICLE title ENDTAG_ART
   22        | . ARTICLE opt ENDTAG_ART
   23        | . ARTICLE Ssect ENDTAG_ART
   24        | . ARTICLE sect ENDTAG_ART

    ARTICLE  desplazar e ir al estado 3

    article  ir al estado 4


estado 2

    0 $accept: sigma . $end

    $end  desplazar e ir al estado 5


estado 3

    2 article: ARTICLE . info title opt sect ENDTAG_ART
    3        | ARTICLE . info title opt Ssect ENDTAG_ART
    4        | ARTICLE . info title opt ENDTAG_ART
    5        | ARTICLE . info title sect ENDTAG_ART
    6        | ARTICLE . info title Ssect ENDTAG_ART
    7        | ARTICLE . info opt sect ENDTAG_ART
    8        | ARTICLE . info opt Ssect ENDTAG_ART
    9        | ARTICLE . title opt sect ENDTAG_ART
   10        | ARTICLE . title opt Ssect ENDTAG_ART
   11        | ARTICLE . info title ENDTAG_ART
   12        | ARTICLE . info opt ENDTAG_ART
   13        | ARTICLE . title opt ENDTAG_ART
   14        | ARTICLE . info sect ENDTAG_ART
   15        | ARTICLE . info Ssect ENDTAG_ART
   16        | ARTICLE . title sect ENDTAG_ART
   17        | ARTICLE . title Ssect ENDTAG_ART
   18        | ARTICLE . opt sect ENDTAG_ART
   19        | ARTICLE . opt Ssect ENDTAG_ART
   20        | ARTICLE . info ENDTAG_ART
   21        | ARTICLE . title ENDTAG_ART
   22        | ARTICLE . opt ENDTAG_ART
   23        | ARTICLE . Ssect ENDTAG_ART
   24        | ARTICLE . sect ENDTAG_ART
   25 opt: . itemizedlist opt
   26    | . important opt
   27    | . para opt
   28    | . simpara opt
   29    | . address opt
   30    | . mediaobject opt
   31    | . informaltable opt
   32    | . comment opt
   33    | . abstract opt
   34    | . important
   35    | . emphasis
   36    | . itemizedlist
   37    | . para
   38    | . simpara
   39    | . address
   40    | . mediaobject
   41    | . informaltable
   42    | . comment
   43    | . abstract
   44 Ssect: . simplesection Ssect
   45      | . simplesection
   46 sect: . section sect
   47     | . section
   48 section: . SECTION info title2 opt sect ENDTAG_S
   49        | . SECTION info title2 opt Ssect ENDTAG_S
   50        | . SECTION info title2 opt ENDTAG_S
   51        | . SECTION info title2 sect ENDTAG_S
   52        | . SECTION info title2 Ssect ENDTAG_S
   53        | . SECTION info opt sect ENDTAG_S
   54        | . SECTION info opt Ssect ENDTAG_S
   55        | . SECTION title2 opt sect ENDTAG_S
   56        | . SECTION title2 opt Ssect ENDTAG_S
   57        | . SECTION info title2 ENDTAG_S
   58        | . SECTION info opt ENDTAG_S
   59        | . SECTION title2 opt ENDTAG_S
   60        | . SECTION info sect ENDTAG_S
   61        | . SECTION info Ssect ENDTAG_S
   62        | . SECTION title2 sect ENDTAG_S
   63        | . SECTION title2 Ssect ENDTAG_S
   64        | . SECTION opt sect ENDTAG_S
   65        | . SECTION opt Ssect ENDTAG_S
   66        | . SECTION info ENDTAG_S
   67        | . SECTION title2 ENDTAG_S
   68        | . SECTION opt ENDTAG_S
   69        | . SECTION Ssect ENDTAG_S
   70        | . SECTION sect ENDTAG_S
   71 simplesection: .  [ENDTAG_ART, SIMPLESECTION]
   72              | . SIMPLESECTION info title opt ENDTAG_SS
   73              | . SIMPLESECTION info title ENDTAG_SS
   74              | . SIMPLESECTION info opt ENDTAG_SS
   75              | . SIMPLESECTION title opt ENDTAG_SS
   76              | . SIMPLESECTION info ENDTAG_SS
   77              | . SIMPLESECTION title ENDTAG_SS
   78              | . SIMPLESECTION opt ENDTAG_SS
   79 info: . INFO in_info ENDTAG_INFO
   98 abstract: . ABSTRACT title in_abs ENDTAG_ABS
   99         | . ABSTRACT in_abs ENDTAG_ABS
  100 address: . ADDRESS in_ad ENDTAG_ADD
  133 title: . TITLE in_tit ENDTAG_TT1
  147 comment: . COMMENT in_g1 ENDTAG_COM
  148 simpara: . SIMPARA in_g1 ENDTAG_SP
  149 emphasis: . EMPHASIS in_g1 ENDTAG_EMP
  151 para: . PARA in_para ENDTAG_P
  156 important: . IMPORTANT title opt ENDTAG_IMP
  157          | . IMPORTANT opt ENDTAG_IMP
  176 mediaobject: . MEDIAOBJECT info media ENDTAG_MOBJ
  177            | . MEDIAOBJECT media ENDTAG_MOBJ
  186 itemizedlist: . ITEMIZEDLIST in_il ENDTAG_IL
  190 informaltable: . INFORMALTABLE in_it1 ENDTAG_IT
  191              | . INFORMALTABLE in_it2 ENDTAG_IT

    SECTION        desplazar e ir al estado 6
    SIMPLESECTION  desplazar e ir al estado 7
    TITLE          desplazar e ir al estado 8
    INFO           desplazar e ir al estado 9
    INFORMALTABLE  desplazar e ir al estado 10
    ITEMIZEDLIST   desplazar e ir al estado 11
    ABSTRACT       desplazar e ir al estado 12
    ADDRESS        desplazar e ir al estado 13
    COMMENT        desplazar e ir al estado 14
    SIMPARA        desplazar e ir al estado 15
    EMPHASIS       desplazar e ir al estado 16
    PARA           desplazar e ir al estado 17
    IMPORTANT      desplazar e ir al estado 18
    MEDIAOBJECT    desplazar e ir al estado 19

    SIMPLESECTION  [reduce usando la regla 71 (simplesection)]
    $default       reduce usando la regla 71 (simplesection)

    opt            ir al estado 20
    Ssect          ir al estado 21
    sect           ir al estado 22
    section        ir al estado 23
    simplesection  ir al estado 24
    info           ir al estado 25
    abstract       ir al estado 26
    address        ir al estado 27
    title          ir al estado 28
    comment        ir al estado 29
    simpara        ir al estado 30
    emphasis       ir al estado 31
    para           ir al estado 32
    important      ir al estado 33
    mediaobject    ir al estado 34
    itemizedlist   ir al estado 35
    informaltable  ir al estado 36


estado 4

    1 sigma: DOCTYPE article .

    $default  reduce usando la regla 1 (sigma)


estado 5

    0 $accept: sigma $end .

    $default  aceptar


estado 6

   25 opt: . itemizedlist opt
   26    | . important opt
   27    | . para opt
   28    | . simpara opt
   29    | . address opt
   30    | . mediaobject opt
   31    | . informaltable opt
   32    | . comment opt
   33    | . abstract opt
   34    | . important
   35    | . emphasis
   36    | . itemizedlist
   37    | . para
   38    | . simpara
   39    | . address
   40    | . mediaobject
   41    | . informaltable
   42    | . comment
   43    | . abstract
   44 Ssect: . simplesection Ssect
   45      | . simplesection
   46 sect: . section sect
   47     | . section
   48 section: . SECTION info title2 opt sect ENDTAG_S
   48        | SECTION . info title2 opt sect ENDTAG_S
   49        | . SECTION info title2 opt Ssect ENDTAG_S
   49        | SECTION . info title2 opt Ssect ENDTAG_S
   50        | . SECTION info title2 opt ENDTAG_S
   50        | SECTION . info title2 opt ENDTAG_S
   51        | . SECTION info title2 sect ENDTAG_S
   51        | SECTION . info title2 sect ENDTAG_S
   52        | . SECTION info title2 Ssect ENDTAG_S
   52        | SECTION . info title2 Ssect ENDTAG_S
   53        | . SECTION info opt sect ENDTAG_S
   53        | SECTION . info opt sect ENDTAG_S
   54        | . SECTION info opt Ssect ENDTAG_S
   54        | SECTION . info opt Ssect ENDTAG_S
   55        | . SECTION title2 opt sect ENDTAG_S
   55        | SECTION . title2 opt sect ENDTAG_S
   56        | . SECTION title2 opt Ssect ENDTAG_S
   56        | SECTION . title2 opt Ssect ENDTAG_S
   57        | . SECTION info title2 ENDTAG_S
   57        | SECTION . info title2 ENDTAG_S
   58        | . SECTION info opt ENDTAG_S
   58        | SECTION . info opt ENDTAG_S
   59        | . SECTION title2 opt ENDTAG_S
   59        | SECTION . title2 opt ENDTAG_S
   60        | . SECTION info sect ENDTAG_S
   60        | SECTION . info sect ENDTAG_S
   61        | . SECTION info Ssect ENDTAG_S
   61        | SECTION . info Ssect ENDTAG_S
   62        | . SECTION title2 sect ENDTAG_S
   62        | SECTION . title2 sect ENDTAG_S
   63        | . SECTION title2 Ssect ENDTAG_S
   63        | SECTION . title2 Ssect ENDTAG_S
   64        | . SECTION opt sect ENDTAG_S
   64        | SECTION . opt sect ENDTAG_S
   65        | . SECTION opt Ssect ENDTAG_S
   65        | SECTION . opt Ssect ENDTAG_S
   66        | . SECTION info ENDTAG_S
   66        | SECTION . info ENDTAG_S
   67        | . SECTION title2 ENDTAG_S
   67        | SECTION . title2 ENDTAG_S
   68        | . SECTION opt ENDTAG_S
   68        | SECTION . opt ENDTAG_S
   69        | . SECTION Ssect ENDTAG_S
   69        | SECTION . Ssect ENDTAG_S
   70        | . SECTION sect ENDTAG_S
   70        | SECTION . sect ENDTAG_S
   71 simplesection: .  [ENDTAG_S, SIMPLESECTION]
   72              | . SIMPLESECTION info title opt ENDTAG_SS
   73              | . SIMPLESECTION info title ENDTAG_SS
   74              | . SIMPLESECTION info opt ENDTAG_SS
   75              | . SIMPLESECTION title opt ENDTAG_SS
   76              | . SIMPLESECTION info ENDTAG_SS
   77              | . SIMPLESECTION title ENDTAG_SS
   78              | . SIMPLESECTION opt ENDTAG_SS
   79 info: . INFO in_info ENDTAG_INFO
   98 abstract: . ABSTRACT title in_abs ENDTAG_ABS
   99         | . ABSTRACT in_abs ENDTAG_ABS
  100 address: . ADDRESS in_ad ENDTAG_ADD
  134 title2: . TITLE2 in_tit ENDTAG_TT2
  147 comment: . COMMENT in_g1 ENDTAG_COM
  148 simpara: . SIMPARA in_g1 ENDTAG_SP
  149 emphasis: . EMPHASIS in_g1 ENDTAG_EMP
  151 para: . PARA in_para ENDTAG_P
  156 important: . IMPORTANT title opt ENDTAG_IMP
  157          | . IMPORTANT opt ENDTAG_IMP
  176 mediaobject: . MEDIAOBJECT info media ENDTAG_MOBJ
  177            | . MEDIAOBJECT media ENDTAG_MOBJ
  186 itemizedlist: . ITEMIZEDLIST in_il ENDTAG_IL
  190 informaltable: . INFORMALTABLE in_it1 ENDTAG_IT
  191              | . INFORMALTABLE in_it2 ENDTAG_IT

    SECTION        desplazar e ir al estado 6
    SIMPLESECTION  desplazar e ir al estado 7
    TITLE2         desplazar e ir al estado 37
    INFO           desplazar e ir al estado 9
    INFORMALTABLE  desplazar e ir al estado 10
    ITEMIZEDLIST   desplazar e ir al estado 11
    ABSTRACT       desplazar e ir al estado 12
    ADDRESS        desplazar e ir al estado 13
    COMMENT        desplazar e ir al estado 14
    SIMPARA        desplazar e ir al estado 15
    EMPHASIS       desplazar e ir al estado 16
    PARA           desplazar e ir al estado 17
    IMPORTANT      desplazar e ir al estado 18
    MEDIAOBJECT    desplazar e ir al estado 19

    SIMPLESECTION  [reduce usando la regla 71 (simplesection)]
    $default       reduce usando la regla 71 (simplesection)

    opt            ir al estado 38
    Ssect          ir al estado 39
    sect           ir al estado 40
    section        ir al estado 23
    simplesection  ir al estado 24
    info           ir al estado 41
    abstract       ir al estado 26
    address        ir al estado 27
    title2         ir al estado 42
    comment        ir al estado 29
    simpara        ir al estado 30
    emphasis       ir al estado 31
    para           ir al estado 32
    important      ir al estado 33
    mediaobject    ir al estado 34
    itemizedlist   ir al estado 35
    informaltable  ir al estado 36


estado 7

   25 opt: . itemizedlist opt
   26    | . important opt
   27    | . para opt
   28    | . simpara opt
   29    | . address opt
   30    | . mediaobject opt
   31    | . informaltable opt
   32    | . comment opt
   33    | . abstract opt
   34    | . important
   35    | . emphasis
   36    | . itemizedlist
   37    | . para
   38    | . simpara
   39    | . address
   40    | . mediaobject
   41    | . informaltable
   42    | . comment
   43    | . abstract
   72 simplesection: SIMPLESECTION . info title opt ENDTAG_SS
   73              | SIMPLESECTION . info title ENDTAG_SS
   74              | SIMPLESECTION . info opt ENDTAG_SS
   75              | SIMPLESECTION . title opt ENDTAG_SS
   76              | SIMPLESECTION . info ENDTAG_SS
